Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-May-2013 Mark Dexter
 + Add webdriver tests for contacts, weblinks, and banners. Thanks George Wilson.

22-May-2013 Mark Dexter
 # Fix failing system tests due to markup changes.

16-May-2013 Mark Dexter
 + Added TagManager0002Test.php. Thanks Puneet Kala.

09-May-2013 Mark Dexter
 # Finish system tests for back end Tags Manager. Thanks Puneet Kala.

08-May-2013 Mark Dexter
 # Fix failing system test for markup change in Template Manager.

04-May-2013 Michael Babker
 # Fix failing unit tests

03-May-2013 JM Simonet
 # Corrected test for #30788

02-May-2013 Mark Dexter
 # Fix up doc blocks as example for Webdriver page classes and tests.
 # Added test for Tag Manager. Thanks Puneet Kala.

30-Apr-2013 Mark Dexter
 # Fix system tests for clearfix class in front end

25-Apr-2013 Mark Dexter
 # Fix webdriver tests for change in module edit form (using textarea for class suffix)

22-Apr-2013 Mark Dexter
 # Change error reporting to Development in auto install.

20-Apr-2013 Mark Dexter
 # Fix failing system test from change in class suffix from input to textarea.

12-Apr-2013 Michael Babker
 # Fix failing unit tests from UCM refactor

06-Apr-2013 Mark Dexter
 # Fix failing system test.

29-Mar-2013 Michael Babker
 +# Test JTableCorecontent, fix bugs found in class

29-Mar-2013 Mark Dexter
 # Fix failing system tests.
 # More system test fixes, fix CHANGELOG typo.

26-Mar-2013 Mark Dexter
 # Fix failing system tests due to login markup change, Tags menu item change

26-Mar-2013 Michael Babker
 +# Expand Schema test coverage

25-Mar-2013 Michael Babker
 +# Test JTableContenttype, fix bugs found in class
 +# Start testing JTags

05-Mar-2013 Mark Dexter
 # Fix system tests for tags component and modules
