@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 28-May-2013 Mark Dexter
  + Add webdriver tests for contacts, weblinks, and banners. Thanks George Wilson.
+ + Add skeleton classes for com_categories to work around inconsistent URL issue.
 
 22-May-2013 Mark Dexter
  # Fix failing system tests due to markup changes.
